Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </head>
 
 <body>
-  <h1>🎉 Festa de Confraternização Cawe - 2025 🎉</h1>
+  <h1>🎉 Festa Cawe - 2025 🎉</h1>
 
   <div class="camera-box" id="cameraBox">
     <span class="camera-icon">📷</span>
@@ -165,3 +165,4 @@
   </script>
 </body>
 </html>
+
