--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </head>
 
 <body>
-  <h1>🎉 Festa Cawe - 2025 🎉</h1>
+  <h1>🎉 Casamento Lucas & Tamires - 13.12.25 🎉</h1>
 
   <div class="camera-box" id="cameraBox">
     <span class="camera-icon">📷</span>
@@ -165,4 +165,5 @@
   </script>
 </body>
 </html>
+
 
