--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <button id="send-btn">Enviar Foto</button>
   <div id="loading">Enviando foto... ⏳</div>
 
-  <footer>Desenvolvido por: <strong>Sempre Juntos Lembranças</strong></footer>
+  <footer>Desenvolvido por: <strong>Sempre Juntos SP - (11) 94785-3999</strong></footer>
 
   <script>
     const cameraBox = document.getElementById('cameraBox');
@@ -165,5 +165,6 @@
   </script>
 </body>
 </html>
+
 
 
