--- a/index.html
+++ b/index.html
@@ -106,7 +106,19 @@
   <button id="send-btn">Enviar Foto</button>
   <div id="loading">Enviando foto... ⏳</div>
 
-  <footer>Desenvolvido por: <strong>Sempre Juntos SP - (11) 94785-3999</strong></footer>
+  <footer>
+  Desenvolvido por: 
+  <strong>
+    <a 
+      href="https://wa.me/5511947853999" 
+      target="_blank" 
+      style="color: inherit; text-decoration: none;"
+    >
+      Sempre Juntos SP - (11) 94785-3999
+    </a>
+  </strong>
+</footer>
+
 
   <script>
     const cameraBox = document.getElementById('cameraBox');
@@ -165,6 +177,7 @@
   </script>
 </body>
 </html>
+
 
 
 
